added custom segues

--- a/CustomSegues/Base.lproj/Main.storyboard
+++ b/CustomSegues/Base.lproj/Main.storyboard
@@ -179,6 +179,7 @@
                     </view>
                     <connections>
                         <outlet property="lblMessage" destination="CIx-wF-9IR" id="I5c-pW-Nbi"/>
+                        <segue destination="1Ek-HC-Tvg" kind="custom" identifier="FIRST_SEGUE" customClass="FirstCustomSegue" customModule="CustomSegues" customModuleProvider="target" id="HbY-4F-dJ7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -275,11 +276,14 @@
                     </view>
                     <connections>
                         <outlet property="lblMessage" destination="uqV-EQ-wtU" id="EXW-Lu-w0n"/>
+                        <segue destination="ZPF-aV-oJx" kind="unwind" identifier="FIRST_SEGUE_UNWIND" unwindAction="returnFromSegueActions:" id="kyu-mb-AqL"/>
+                        <segue destination="ult-AQ-rlm" kind="custom" identifier="SECOND_SEGUE" customClass="SecondCustomSegue" customModule="CustomSegues" customModuleProvider="target" id="k7e-Sd-7Dh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n6I-v8-kNm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ZPF-aV-oJx" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="855" y="199.5"/>
+            <point key="canvasLocation" x="1162.5" y="182.25"/>
         </scene>
     </scenes>
 </document>
